@@ -75,6 +75,12 @@ int wxGetDisplayDepth(CGDirectDisplayID id)
     return theDepth;
 }
 
+wxSize wxGetDisplaySizeMM(CGDirectDisplayID id)
+{
+    const CGSize size = CGDisplayScreenSize(id);
+    return wxSize(wxRound(size.width), wxRound(size.height));
+}
+
 } // anonymous namespace
 
 #if wxUSE_DISPLAY
@@ -97,6 +103,7 @@ public:
     virtual wxRect GetGeometry() const wxOVERRIDE;
     virtual wxRect GetClientArea() const wxOVERRIDE;
     virtual int GetDepth() const wxOVERRIDE;
+    virtual wxSize GetSizeMM() const wxOVERRIDE;
 
     virtual wxArrayVideoModes GetModes(const wxVideoMode& mode) const wxOVERRIDE;
     virtual wxVideoMode GetCurrentMode() const wxOVERRIDE;
@@ -258,6 +265,11 @@ int wxDisplayImplMacOSX::GetDepth() const
     return wxGetDisplayDepth(m_id);
 }
 
+wxSize wxDisplayImplMacOSX::GetSizeMM() const
+{
+    return wxGetDisplaySizeMM(m_id);
+}
+
 static int wxOSXCGDisplayModeGetBitsPerPixel( CGDisplayModeRef theValue )
 {
     wxCFRef<CFStringRef> pixelEncoding( CGDisplayModeCopyPixelEncoding(theValue) );
@@ -372,6 +384,11 @@ public:
     virtual int GetDepth() const wxOVERRIDE
     {
         return wxGetDisplayDepth(CGMainDisplayID());
+    }
+
+    virtual wxSize GetSizeMM() const wxOVERRIDE
+    {
+        return wxGetDisplaySizeMM(CGMainDisplayID());
     }
 };
 
