@@ -106,28 +106,6 @@ bool wxDoLaunchDefaultBrowser(const wxLaunchBrowserParams& params)
 
 #endif
 
-void wxDisplaySizeMM(int *width, int *height)
-{
-#if wxOSX_USE_IPHONE
-    wxDisplaySize(width, height);
-    // on mac 72 is fixed (at least now;-)
-    double cvPt2Mm = 25.4 / 72;
-    
-    if (width != NULL)
-        *width = int( *width * cvPt2Mm );
-    
-    if (height != NULL)
-        *height = int( *height * cvPt2Mm );
-#else
-    CGSize size = CGDisplayScreenSize(CGMainDisplayID());
-    if ( width )
-        *width = (int)size.width ;
-    if ( height )
-        *height = (int)size.height;
-#endif
-}
-
-
 wxPortId wxGUIAppTraits::GetToolkitVersion(int *verMaj,
                                            int *verMin,
                                            int *verMicro) const
