@@ -22,6 +22,7 @@ public:
     virtual wxRect GetGeometry() const wxOVERRIDE;
     virtual wxRect GetClientArea() const wxOVERRIDE;
     virtual int GetDepth() const wxOVERRIDE;
+    virtual wxSize GetSizeMM() const wxOVERRIDE;
 
 #if wxUSE_DISPLAY
     virtual wxArrayVideoModes GetModes(const wxVideoMode& mode) const wxOVERRIDE;
@@ -48,6 +49,13 @@ wxRect wxDisplayImplQt::GetClientArea() const
 int wxDisplayImplQt::GetDepth() const
 {
     return IsPrimary() ? QApplication::desktop()->depth() : 0;
+}
+
+wxSize wxDisplayImplQt::GetSizeMM() const
+{
+    return IsPrimary() ? wxSize(QApplication::desktop()->widthMM(),
+                                QApplication::desktop()->heightMM())
+                       : wxSize(0, 0);
 }
 
 #if wxUSE_DISPLAY
