@@ -44,6 +44,17 @@ inline int wxGetMainScreenDepth()
     return DefaultDepth(dpy, DefaultScreen (dpy));
 }
 
+inline wxSize wxGetMainScreenSizeMM()
+{
+    Display* const dpy = wxGetX11Display();
+
+    return wxSize
+           (
+                DisplayWidthMM(dpy, DefaultScreen(dpy)),
+                DisplayHeightMM(dpy, DefaultScreen(dpy))
+           );
+}
+
 class wxDisplayImplSingleX11 : public wxDisplayImplSingle
 {
 public:
@@ -64,6 +75,11 @@ public:
     virtual int GetDepth() const wxOVERRIDE
     {
         return wxGetMainScreenDepth();
+    }
+
+    virtual wxSize GetSizeMM() const wxOVERRIDE
+    {
+        return wxGetMainScreenSizeMM();
     }
 };
 
@@ -142,6 +158,11 @@ public:
             return mode.bpp;
 
         return wxGetMainScreenDepth();
+    }
+    virtual wxSize GetSizeMM() const wxOVERRIDE
+    {
+        // TODO: how to get physical size or resolution of the other monitors?
+        return IsPrimary() ? wxGetMainScreenSizeMM() : wxSize(0, 0);
     }
 
     virtual wxArrayVideoModes GetModes(const wxVideoMode& mode) const wxOVERRIDE;
