@@ -127,6 +127,7 @@ All (GUI):
 - Allow binding to events generated by their items in submenus too.
 - Add wxGrid::SetCornerLabelValue() (Pavel Kalugin).
 - Add strikethrough support for fonts defined in XRC.
+- Add wxDisplay::GetPPI().
 
 wxGTK:
 
